--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/bcrypt": "^3.0.0",
     "axios": "^0.26.0",
     "base-64": "^1.0.0",
+    "basic-ftp": "^5.0.3",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cache-manager": "^3.4.4",
@@ -56,6 +57,7 @@
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^3.1.0",
     "md5": "^2.3.0",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
