--- a/package.json
+++ b/package.json
@@ -49,9 +49,10 @@
     "crypto-js": "^4.1.1",
     "crypto-random-string": "^3.3.1",
     "dotenv": "^8.2.0",
+    "easy-ftp": "^0.4.2",
     "express-jwt": "5.3.1",
     "fast-xml-parser": "^4.0.12",
-    "ftp-client": "^0.2.2",
+    "ftp": "^0.3.10",
     "ioredis": "^4.23.0",
     "js-sha512": "^0.8.0",
     "jsonwebtoken": "^8.5.1",
@@ -63,6 +64,7 @@
     "rxjs": "^6.5.4",
     "sequelize": "6.6.2",
     "sequelize-typescript": "2.1.5",
+    "ssh2-sftp-client": "^9.1.0",
     "swagger-ui-express": "^4.2.0",
     "ulid": "^2.3.0",
     "uuid": "^8.3.2"
