adjust env and aws uploader

--- a/apps/ftp-to-s3/.env.example
+++ b/apps/ftp-to-s3/.env.example
@@ -21,3 +21,6 @@ FTP_PASSWORD=
 STORAGE_KEY_ID=
 STORAGE_ACCESS_KEY=
 STORAGE_BUCKET=
+STORAGE_ENDPOINT=s3.ap-southeast-1.amazonaws.com
+
+STORAGE_DIRECTORY=ftp-to-s3
