--- a/apps/ftp-to-s3/.env.example
+++ b/apps/ftp-to-s3/.env.example
@@ -24,3 +24,6 @@ STORAGE_BUCKET=
 STORAGE_ENDPOINT=s3.ap-southeast-1.amazonaws.com
 
 STORAGE_DIRECTORY=ftp-to-s3
+
+RUN_SCHEDULER_S3_UPLOADER=true
+RUN_SCHEDULER_FILE_FIXER=true
