--- a/apps/ftp-to-s3/.env.example
+++ b/apps/ftp-to-s3/.env.example
@@ -26,4 +26,6 @@ STORAGE_ENDPOINT=s3.ap-southeast-1.amazonaws.com
 STORAGE_DIRECTORY=ftp-to-s3
 
 RUN_SCHEDULER_S3_UPLOADER=true
+S3_UPLOADER_PREFIX=Listing
 RUN_SCHEDULER_FILE_FIXER=true
+FILE_FIXER_PREFIX=Listing
